--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -468,6 +468,10 @@ body {
         width: 100%;
         height: 42vh;
     }
+        .foot_image {
+            left: 25%;
+            width: 145%;
+        }
 
     .foot_cont {
         display: block;
