--- a/public/stylesheets/spotify.css
+++ b/public/stylesheets/spotify.css
@@ -397,6 +397,10 @@
         width: 100%;
         height: 42vh;
     }
+        .foot_image {
+            left: 25%;
+            width: 145%;
+        }
 
     .foot_cont {
         display: block;
