--- a/views/sign.ejs
+++ b/views/sign.ejs
@@ -115,9 +115,7 @@
                 height: auto;
             }
 
-            .content {
-                height: 90vh;
-            }
+           
 
             #login {
                 font-size: 5vw;
@@ -127,9 +125,13 @@
 
         @media screen and (max-width:600px) {
             .center {
-                width: 86vw;
-            }
+                height: auto;
+                width: 80vw;
 
+            }
+            .content{
+                height: auto;
+            }
             .img {
                 width: 50vw;
                 height: auto;
